<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.ActorDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_back_button"
            android:contentDescription="@string/banner_image"
            android:scaleType="centerCrop"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/image_card"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintCircleRadius="4dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_back">

            <ImageView
                android:id="@+id/actor_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_actor_name"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/image_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_card"
            tools:text="@string/actor_name"/>


        <TextView
            android:id="@+id/text_also_known_as"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:maxLines="4"
            app:layout_constraintStart_toEndOf="@id/image_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_actor_name"
            tools:text="@string/known_for"/>

        <TextView
            android:id="@+id/text_popularity"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:drawableStart="@drawable/ic_baseline_thumb_up_24"
            android:drawablePadding="6dp"
            app:layout_constraintStart_toEndOf="@id/image_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_also_known_as"
            tools:text="@string/popular"/>

        <TextView
            android:id="@+id/text_character"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:drawablePadding="6dp"
            app:layout_constraintStart_toEndOf="@id/image_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_popularity"
            tools:text="Characters"/>

        <TextView
            android:id="@+id/text_birthday"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:drawableStart="@drawable/ic_baseline_calendar_today_24"
            android:drawablePadding="6dp"
            app:layout_constraintStart_toEndOf="@id/image_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_character"
            tools:text="@string/birthday"/>

        <TextView
            android:id="@+id/heading_bio"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_card"/>

        <TextView
            android:id="@+id/text_bio"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="2dp"
            android:textSize="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading_bio"/>

        <TextView
            android:id="@+id/heading_best_movie"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:textSize="18dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Best Movies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_bio"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_best_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading_best_movie"
            tools:listitem="@layout/item_movie_home"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>